# cc_mp

./: .gitignore  CLAUDE.md  LICENSE
.claude-plugin/: marketplace.json
plugins/tools/.claude-plugin/: plugin.json
plugins/tools/commands/: search-emails.md
plugins/tools/scripts/: .env.example  README.md  pyproject.toml  read_emails.py
