[project]
name = "mail-search"
version = "0.1.0"
description = "OAuth2-based email reader for Gmail and Office 365"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "msal>=1.24.0",
]

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
